--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Task-Management System
+
+spring.datasource.url=jdbc:postgresql://localhost:17888/postgres
+spring.datasource.username=postgres
+spring.datasource.password=mypassword
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
